--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,11 +1,7 @@
-build_number_decrement:
-- '0'
+c_compiler:
+- gcc
 channel_sources:
 - conda-forge,defaults
-channel_targets:
-- conda-forge main
-docker_image:
-- condaforge/linux-anvil
 perl:
 - '5.26'
 pin_run_as_build:
